@@ -16,7 +16,7 @@ CC	= gcc
 CFLAGS	= -g -O2 -UNDEBUG -Wall -x $(GLANG) -o $@ $^
 BUILD_DIR	= ..
 INCLUDES	= -I.
-LIBS	= ./libpthread32.a
+LIBS	= -L. -lpthread32
 
 ##
 ## MSVC
